Broken alignment on the Preview  #8124 Fixes #8124

--- a/src/defaultV2-theme/blocks/sd-row.scss
+++ b/src/defaultV2-theme/blocks/sd-row.scss
@@ -57,7 +57,7 @@
   }
 }
 .sd-panel.sd-panel--as-page {
-  &>.sd-panel__content>.sd-row--multiple {
+  &>.sd-panel__content>.sd-row--multiple:not(.sd-row--compact) {
     margin-left: calcSize(-2);
     width: calc(100% + var(--base-unit) * 2);
   }
